cabal-version:      2.4
name:               saw-tools
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A distribution of the Software Analysis Workbench (https://saw.galois.com/), associated tools, and integrations.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lisanna Dettwyler
maintainer:         lisa@axonterminal.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable cryptol
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , cryptol
    hs-source-dirs:   app
    default-language: Haskell2010
